src/main/java/com/example/Demo/errors/exception/InvalidFileSizeException.java
package com.example.Demo.errors.exception;

public class InvalidFileSizeException extends RuntimeException {
    public InvalidFileSizeException(String message) {
        super(message);
    }
}
